exposure ages as notebook

--- a/src/1_exposure-age.ipynb
+++ b/src/1_exposure-age.ipynb
@@ -25,7 +25,10 @@
    "source": [
     "# Import packages\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np \n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from IPython.display import display\n",
+    "import plotly.express as px\n",
     "import os, sys, platform\n",
     "\n",
     "# Define root directory according to current environment\n",
@@ -55,7 +58,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "age=[1000,10000,20000,30000, 50000, 100000,200000,300000,400000,500000,1000000]    "
+    "# Constant erosion rate of the surface (cm/yr)\n",
+    "erosion_rates = [0.000001, 0.0001, 0.001, 0.03]\n",
+    "\n",
+    "# Vector containing the exposure ages (yr) to process\n",
+    "ages = [1000, 10000, 20000, 30000, 50000, 100000, 200000, 300000, 400000, 500000, 1000000]    "
    ]
   },
   {
@@ -69,15 +76,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conc_plot=np.zeros(11)\n",
+    "# Containers for 10Be concentrations results\n",
+    "crn_table = pd.DataFrame({\"exposure_age\": ages})\n",
+    "crn_plot = pd.DataFrame()\n",
     "\n",
-    "for i in range(len(age)): \n",
-    "    Be_concentration = surface_concentration(0.001,age[i])\n",
-    "    conc_plot[i]=Be_concentration\n",
-    "    print (conc_plot)\n",
-    "for i in range(len(conc_plot)):\n",
-    "    conc_plot[i]=conc_plot[i]/1000\n",
-    "    "
+    "# Loop within erosion rate values\n",
+    "for i in range(len(erosion_rates)):\n",
+    "\n",
+    "    # Get current erosion rate\n",
+    "    erosion_rate = erosion_rates[i]\n",
+    "\n",
+    "    # Array to contain CRN concentration for each \n",
+    "    crn_concentrations = np.zeros(len(ages))\n",
+    "\n",
+    "    # Loop within exposure age values\n",
+    "    for i in range(len(ages)): \n",
+    "        \n",
+    "        # Get current exposure age\n",
+    "        exposure_age = ages[i]\n",
+    "\n",
+    "        # Compute 10Be concentration at the surface \n",
+    "        Be_concentration = conc_surf(erosion_rate, exposure_age)\n",
+    "\n",
+    "        # Divide 10Be concentration by 1000 (and store in array\n",
+    "        crn_concentrations[i] = Be_concentration\n",
+    "\n",
+    "    # Convert array of concentrations in a named serie\n",
+    "    crn_concentrations = pd.Series(crn_concentrations, name = \"crn_conc_erate_\" + str(erosion_rate), dtype = 'Float64')\n",
+    "    # Include array of concentrations in a complete dataframe\n",
+    "    crn_df = pd.DataFrame({\"exposure_age\": ages, \"crn_concentration\": crn_concentrations, \"erosion_rate\": pd.Series(np.repeat(erosion_rate, len(ages)))})\n",
+    "\n",
+    "    # Collect concentrations formatted for plots\n",
+    "    crn_plot = pd.concat([crn_plot, crn_df], axis = 0)\n",
+    "    # Collect concentrations into pandas dataframe for csv export\n",
+    "    crn_table = pd.concat([crn_table, crn_concentrations], axis = 1)"
    ]
   },
   {
@@ -93,9 +125,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(age,conc_plot, 'o')\n",
-    "plt.xlabel(\"Exposure age (Ma)\")\n",
-    "plt.ylabel('Concentration (10$^3$ at/g)')"
+    "# Write results to csv file\n",
+    "crn_table.to_csv(\"exposure_ages.csv\")\n",
+    "\n",
+    "# Print the table containing 10Be concentration for each exposure age\n",
+    "display(crn_table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Coerce erosion rate as string and convert at/g to 10^3 at/g\n",
+    "crn_plot[\"erosion_rate\"] = crn_plot[\"erosion_rate\"] * 10000\n",
+    "crn_plot[\"erosion_rate\"] = crn_plot[\"erosion_rate\"].astype(str)\n",
+    "crn_plot[\"crn_concentration\"] = crn_plot[\"crn_concentration\"] / 1000\n",
+    "\n",
+    "# Plot 10Be concentrations for various erosion rates \n",
+    "plot = px.scatter(crn_plot, x = \"exposure_age\", y = \"crn_concentration\", color = \"erosion_rate\", labels = dict(exposure_age = \"Exposure age (a)\", \n",
+    "crn_concentration = \"Concentration (10<sup>3</sup> at/g)\", erosion_rate = \"Erosion rate (m /Ma)\"), log_x = True, log_y = True)\n",
+    "plot.show()"
    ]
   }
  ],
