--- a/src/1_exposure-age.ipynb
+++ b/src/1_exposure-age.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Cosmogenic radionuclides accumulate at the Earth surface and can be modelled as a function of exposure duration and erosion rates. In this notebook, we will explore these interactions. \n",
     "\n",
-    "First, run the cell below to set the working environment (no need to understand these lines of code). "
+    "First, run the cell below to set the working environment (no need to understand these lines of code). If Google Colab warns about the trustfullness of the code, click on `Run anyway`."
    ]
   },
   {
@@ -201,7 +201,7 @@
    "outputs": [],
    "source": [
     "# Write results to csv file\n",
-    "crn_table.to_csv(\"exposure_exposure_ages.csv\")\n",
+    "crn_table.to_csv(\"exposure_ages.csv\")\n",
     "\n",
     "# Print the table containing 10Be concentration for each exposure age\n",
     "display(crn_table)"
@@ -243,7 +243,7 @@
     "- $\\rho$: Bulk density (g/cm³)\n",
     "- $\\Lambda$: Attenuation length (g/cm²)\n",
     "- $\\epsilon:$ Erosion rate (cm/yr)\n",
-    "- $C$: Cosmogonenic concentration (at/g)\n",
+    "- $C$: Cosmogenic concentration (at/g)\n",
     "\n",
     "Using the function `compute_exposure_duration`, compute the exposure age for an erosion rate of 1, 2, 5, 10, and 50 m/Myr. \n",
     "\n",
@@ -261,7 +261,7 @@
     "# Erosion rate (cm/yr)\n",
     "erosion_rate = 0.0001\n",
     "\n",
-    "# Compute exposure age\n",
+    "# Compute exposure age (yr)\n",
     "exposure_age = compute_exposure_age(surface_concentration, erosion_rate, p)\n",
     "\n",
     "print(exposure_age)"
