--- a/src/1_exposure-age.ipynb
+++ b/src/1_exposure-age.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
    "outputs": [],
    "source": [
     "# Constant erosion rate of the surface (cm/yr)\n",
-    "erosion_rates = [0.000001, 0.0001, 0.001, 0.03]\n",
+    "erosion_rates = [0.000001, 0.0001, 0.001, 0.005, 0.01, 0.03]\n",
     "\n",
     "# Vector containing the exposure ages (yr) to process\n",
     "exposure_ages = [1000, 2000, 5000, 10000, 20000, 30000, 50000, 100000, 200000, 300000, 400000, 500000, 1000000]\n",
@@ -214,14 +214,14 @@
    "outputs": [],
    "source": [
     "# Convert erosion rate to m/Ma and coerce as string. \n",
-    "crn_plot[\"erosion_rate\"] = crn_plot[\"erosion_rate\"] * 10000\n",
-    "crn_plot[\"erosion_rate\"] = crn_plot[\"erosion_rate\"].astype(str)\n",
+    "crn_plot[\"erosion_rate_mma\"] = crn_plot[\"erosion_rate\"] * 10000\n",
+    "crn_plot[\"erosion_rate_mma\"] = crn_plot[\"erosion_rate_mma\"].astype(str)\n",
     "# Convert concentrations from at/g to 10^3 at/g.\n",
-    "crn_plot[\"crn_concentration\"] = crn_plot[\"crn_concentration\"] / 1000\n",
+    "crn_plot[\"crn_concentration_103\"] = crn_plot[\"crn_concentration\"] / 1000\n",
     "\n",
     "# Plot 10Be concentrations for various erosion rates \n",
-    "plot = px.scatter(crn_plot, x = \"exposure_age\", y = \"crn_concentration\", color = \"erosion_rate\", labels = dict(exposure_age = \"Exposure age (a)\", \n",
-    "crn_concentration = \"Concentration (10<sup>3</sup> at/g)\", erosion_rate = \"Erosion rate (m /Ma)\"), log_x = True, log_y = True)\n",
+    "plot = px.scatter(crn_plot, x = \"exposure_age\", y = \"crn_concentration_103\", color = \"erosion_rate_mma\", labels = dict(exposure_age = \"Exposure age (a)\", \n",
+    "crn_concentration_103 = \"<sup>10</sup>Be concentration (10<sup>3</sup> at/g)\", erosion_rate_mma = \"Erosion rate (m /Ma)\"), log_x = True, log_y = True)\n",
     "plot.show()"
    ]
   },
@@ -270,7 +270,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -284,12 +284,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "293b0e4ba064906a8557b4eaa242189f34a3eaea729f1289734fdcf46cd0b2b8"
    }
   }
  },
