--- a/src/2_depth-profiles.ipynb
+++ b/src/2_depth-profiles.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "## Surface exposure dating from samples in an upland area\n",
     "\n",
-    "Two positions P1 and P2 are sampled in an upland area for CRN depth profiles. Position P1 is higher in altitude, and was presumably exhumed before P2. \n",
+    "Two positions P1 and P2, formerly covered by a glacier (in red on the Figure), are sampled in an upland area for CRN depth profiles. Position P2 is higher in altitude, and was presumably exhumed after P1, as result of the glacier progressive retreat. \n",
     "\n",
     "![samples-location](../guidelines/imgs/samples-exposure-age.png)\n",
     "\n",
@@ -20,15 +20,15 @@
     "\n",
     "| Depth (m)          | 10Be conc. (x 10³ at/g) | 10Be conc. (x 10³ at/g) |\n",
     "| ------------------ | ----------------------- | ----------------------- |\n",
-    "| 0.0                | 57                      | 96                      |\n",
-    "| 0.5                | 27                      | 43                      |\n",
-    "| 0.75               | 18                      | 29                      |\n",
-    "| 1                  | 13                      | 19                      |\n",
-    "| 1.3                | 9                       | 12                      |\n",
-    "| 1.6                | 6                       | 8                       |\n",
-    "| 2.5                | 3                       | 3                       |\n",
-    "| 4                  | 2                       | 1                       |\n",
-    "| 7                  | 1                       | 1                       |\n",
+    "| 0.0                | 123                     | 328                     |\n",
+    "| 0.5                | 57                      | 146                     |\n",
+    "| 0.75               | 39                      | 98                      |\n",
+    "| 1                  | 28                      | 66                      |\n",
+    "| 1.3                | 19                      | 42                      |\n",
+    "| 1.6                | 13                      | 27                      |\n",
+    "| 2.5                | 7                       | 9                       |\n",
+    "| 4                  | 4                       | 4                       |\n",
+    "| 7                  | 3                       | 2                       |\n",
     "\n",
     "Open the [calculator](https://hess.ess.washington.edu/) and choose \"Calculate exposure ages\", as we are here interested to compute surface exposure ages based on <sup>10</sup>Be concentrations. However, note that you can also compute erosion rates or calibrate production rates, based on other nuclides. \n",
     "\n",
@@ -110,7 +110,7 @@
     "# Concentrations profile 1\n",
     "profile_1 = pd.DataFrame({\n",
     "    \"depth\": depths,\n",
-    "    \"concentration\": [57000, 27000, 18000, 13000, 9000, 6000, 3000, 2000, 1000],\n",
+    "    \"concentration\": [123000, 57000, 39000, 28000, 19000, 13000, 7000, 4000, 3000],\n",
     "    \"profile\": pd.Series(np.repeat(1, len(depths)))\n",
     "    })\n",
     "profile_1[\"data\"] = \"observed\"\n",
@@ -118,7 +118,7 @@
     "# Concentrations profile 2\n",
     "profile_2 = pd.DataFrame({\n",
     "    \"depth\": depths,\n",
-    "    \"concentration\": [96000, 43000, 29000, 19000, 12000, 8000, 3000, 1000, 1000],\n",
+    "    \"concentration\": [328000, 146000, 98000, 66000, 42000, 27000, 9000, 1000, 2000],\n",
     "    \"profile\": pd.Series(np.repeat(2, len(depths)))\n",
     "    })\n",
     "profile_2[\"data\"] = \"observed\"\n",
@@ -131,8 +131,8 @@
     "# depth_profiles = pd.DataFrame(\n",
     "#     {\n",
     "#         \"depth\": [0, 50, 75, 100, 130, 160, 250, 400, 700],\n",
-    "#         \"conc_p1\": [57000, 27000, 18000, 13000, 9000, 6000, 3000, 2000, 1000],\n",
-    "#         \"conc_p2\": [96000, 43000, 29000, 19000, 12000, 8000, 3000, 1000, 1000],\n",
+    "#         \"conc_p1\": [123000, 57000, 39000, 28000, 19000, 13000, 7000, 4000, 3000],\n",
+    "#         \"conc_p2\": [328000, 146000, 98000, 66000, 42000, 27000, 9000, 1000, 2000],\n",
     "#         })\n"
    ]
   },
@@ -171,13 +171,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Erosion rate values (cm)\n",
-    "erosion_rates = [0, 100, 200, 300, 400, 500]\n",
+    "# Erosion values (cm)\n",
+    "erosion = [0, 100, 200, 500, 1000, 2000]\n",
     "print(\"Erosion rates (cm): \")\n",
-    "display(erosion_rates)\n",
+    "display(erosion)\n",
     "\n",
     "# Exposure age values (a)\n",
-    "exposure_ages = [10000, 100000, 200000, 300000, 400000, 500000]\n",
+    "exposure_ages = [20000, 40000, 60000, 80000, 100000, 120000, 140000]\n",
     "print(\"Exposure ages (a): \")\n",
     "display(exposure_ages)\n",
     "\n",
@@ -211,15 +211,15 @@
     "fit_profile_1 = pd.DataFrame()\n",
     "\n",
     "# Loop within erosion rates \n",
-    "for i in range(len(erosion_rates)):\n",
+    "for i in range(len(erosion)):\n",
     "\n",
     "    # Loop within exposure ages\n",
     "    for j in range(len(exposure_ages)):\n",
     "\n",
     "        # Run optimization for current set of values\n",
-    "        crn_fit = be_accumulator(concentrations_profile_1, depths, exposure_ages[j], erosion_rates[i], 0, parameters)\n",
+    "        crn_fit = be_accumulator(concentrations_profile_1, depths, exposure_ages[j], erosion[i], 0, parameters)\n",
     "        # Collect result into temporary dataframe\n",
-    "        current_fit = pd.DataFrame({\"erosion_rate\": erosion_rates[i], \"exposure_age\": exposure_ages[j], \"nash_index\": [crn_fit[\"nash_index\"]]})\n",
+    "        current_fit = pd.DataFrame({\"erosion_rate\": erosion[i], \"exposure_age\": exposure_ages[j], \"nash_index\": [crn_fit[\"nash_index\"]]})\n",
     "        # Collect current result in to main container\n",
     "        fit_profile_1 = pd.concat([fit_profile_1, current_fit], axis = 0)\n",
     "\n",
@@ -230,7 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Select the pair of values that provides a Nash-Sutcliffe value closest to 1, i.e. the largest value, that will correspond to our best scenario, optimizing the observed depth profile."
+    "Select the pair of values that provides a Nash-Sutcliffe value closest to 1, i.e. the largest value, that will correspond to our best scenario, optimizing the exposure age and the erosion of the observed depth profile."
    ]
   },
   {
@@ -405,7 +405,7 @@
    "source": [
     "## Interpretation \n",
     "\n",
-    "Based on the Nash-Sutcliffe optimization criterion (best value is a maximization and should approach as close as possible to 1), how would you describe the history of the landscape ?"
+    "Based on the Nash-Sutcliffe optimization criterion (best value is a maximization and should approach as close as possible to 1), how would you describe the main steps of the landscape's history ?"
    ]
   }
  ],
