--- a/src/2_depth-profiles.ipynb
+++ b/src/2_depth-profiles.ipynb
@@ -219,7 +219,7 @@
     "        # Run optimization for current set of values\n",
     "        crn_fit = be_accumulator(concentrations_profile_1, depths, exposure_ages[j], erosion[i], 0, parameters)\n",
     "        # Collect result into temporary dataframe\n",
-    "        current_fit = pd.DataFrame({\"erosion_rate\": erosion[i], \"exposure_age\": exposure_ages[j], \"nash_index\": [crn_fit[\"nash_index\"]]})\n",
+    "        current_fit = pd.DataFrame({\"erosion\": erosion[i], \"exposure_age\": exposure_ages[j], \"nash_index\": [crn_fit[\"nash_index\"]]})\n",
     "        # Collect current result in to main container\n",
     "        fit_profile_1 = pd.concat([fit_profile_1, current_fit], axis = 0)\n",
     "\n",
