--- a/src/2_depth-profiles.ipynb
+++ b/src/2_depth-profiles.ipynb
@@ -173,7 +173,7 @@
    "source": [
     "# Erosion values (cm)\n",
     "erosion = [0, 100, 200, 500, 1000, 2000]\n",
-    "print(\"Erosion rates (cm): \")\n",
+    "print(\"Erosion (cm): \")\n",
     "display(erosion)\n",
     "\n",
     "# Exposure age values (a)\n",
