--- a/src/2_depth-profiles.ipynb
+++ b/src/2_depth-profiles.ipynb
@@ -405,7 +405,7 @@
    "source": [
     "## Interpretation \n",
     "\n",
-    "Based on the Nash-Sutcliffe optimization criterion (best value is a maximization and should approach as close as possible to 1), how would you describe the main steps of the landscape's history ?"
+    "Based on the Nash-Sutcliffe optimization criterion (best value is a maximization and should approach as close as possible to 1), how would you describe the main steps of the landscape history ?"
    ]
   }
  ],
