--- a/src/2_depth-profiles.ipynb
+++ b/src/2_depth-profiles.ipynb
@@ -256,13 +256,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Erosion rate of selected scenario\n",
-    "erosion_rate = 200\n",
+    "# Erosion of selected scenario\n",
+    "erosion = 200\n",
     "# Exposure age of selected scenario\n",
     "exposure_age = 200000\n",
     "\n",
     "# Run the scenario with the selected values\n",
-    "crn_fit_1 = be_accumulator(concentrations_profile_1, depths, exposure_age, erosion_rate, 0, parameters)\n",
+    "crn_fit_1 = be_accumulator(concentrations_profile_1, depths, exposure_age, erosion, 0, parameters)\n",
     "\n",
     "# Get the fitted CRN values and add them to profile table\n",
     "display(pd.concat([profile_1, pd.Series(crn_fit_1[\"crn_fitted\"], name = \"crn_fitted\", dtype = \"Float64\")], axis = 1))"
@@ -315,16 +315,16 @@
     "# Container for optimization results\n",
     "fit_profile_2 = pd.DataFrame()\n",
     "\n",
-    "# Loop within erosion rates \n",
-    "for i in range(len(erosion_rates)):\n",
+    "# Loop within erosion \n",
+    "for i in range(len(erosion)):\n",
     "\n",
     "    # Loop within exposure ages\n",
     "    for j in range(len(exposure_ages)):\n",
     "\n",
     "        # Run optimization for current set of values\n",
-    "        crn_fit = be_accumulator(concentrations_profile_2, depths, exposure_ages[j], erosion_rates[i], 0, parameters)\n",
+    "        crn_fit = be_accumulator(concentrations_profile_2, depths, exposure_ages[j], erosion[i], 0, parameters)\n",
     "        # Collect result into temporary dataframe\n",
-    "        current_fit = pd.DataFrame({\"erosion_rate\": erosion_rates[i], \"exposure_age\": exposure_ages[j], \"nash_index\": [crn_fit[\"nash_index\"]]})\n",
+    "        current_fit = pd.DataFrame({\"erosion\": erosion[i], \"exposure_age\": exposure_ages[j], \"nash_index\": [crn_fit[\"nash_index\"]]})\n",
     "        # Collect current result in to main container\n",
     "        fit_profile_2 = pd.concat([fit_profile_2, current_fit], axis = 0)\n",
     "\n",
@@ -361,8 +361,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Erosion rate of selected scenario\n",
-    "erosion_rate = 200\n",
+    "# Erosion of selected scenario\n",
+    "erosion = 200\n",
     "# Exposure age of selected scenario\n",
     "exposure_age = 200000\n",
     "\n",
