--- a/src/2_depth-profiles.ipynb
+++ b/src/2_depth-profiles.ipynb
@@ -162,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The aim is now to find the pair of values for erosion rate and exposure age that best fit the two depth profiles, using the Nash-Suthcliffe optimization. To achieve this goal, we will model the depth profile for different combinations of erosion and exposure age values, as defined below: "
+    "The aim is now to find the pair of values for erosion value and exposure age that best fit the two depth profiles, using the Nash-Suthcliffe optimization. To achieve this goal, we will model the depth profile for different combinations of erosion and exposure age values, as defined below: "
    ]
   },
   {
@@ -210,7 +210,7 @@
     "# Container for optimization results\n",
     "fit_profile_1 = pd.DataFrame()\n",
     "\n",
-    "# Loop within erosion rates \n",
+    "# Loop within erosion values \n",
     "for i in range(len(erosion)):\n",
     "\n",
     "    # Loop within exposure ages\n",
