--- a/src/2_depth-profiles.ipynb
+++ b/src/2_depth-profiles.ipynb
@@ -140,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we can plot the concentrations observed in each depth profile."
+    "Now, we can plot the concentrations observed in each depth profile. What profile seems the oldest ? Is it logical with respect to the process of glacier retreat ?  "
    ]
   },
   {
@@ -405,7 +405,7 @@
    "source": [
     "## Interpretation \n",
     "\n",
-    "Based on the Nash-Sutcliffe optimization criterion (best value is a maximization and should approach as close as possible to 1), how would you describe the main steps of the landscape history ?"
+    "Based on the Nash-Sutcliffe optimization criterion (best value is a maximization and should approach as close as possible to 1), how would you describe the main steps of the landscape history?"
    ]
   }
  ],
