update exposure age exercice

--- a/src/1_exposure-age.ipynb
+++ b/src/1_exposure-age.ipynb
@@ -73,7 +73,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To compute the <sup>10</sup>Be surface concentration, the equation below is used (Dunai, 2010). We asssume that exposure time is clocking since the onset of the erosion of the surface, with no pre-exposure memory.\n",
+    "Cosmogenic nuclides are the products of interactions of primary and secondary cosmic-ray particles with atomic nuclei. In-situ produced <sup>10</sup>Be cosmogenic radionuclides preferentially accumulate in quartz minerals. The accumulation of cosmogenic radionuclides is basically a function of (1) the production rate, (2) the inheritance, (3) the depth, (4) the erosion rate and (5) the exposure age.\n",
+    "\n",
+    "To compute the <sup>10</sup>Be surface concentration, the equation below is used (Dunai, 2010). We asssume that exposure time is clocking since the onset of the erosion of the surface, with no pre-exposure memory and therefore no inheritance.\n",
     "\n",
     "$$ C = \\frac{P}{\\lambda + \\frac{\\epsilon \\cdot \\rho}{\\Lambda}} \\cdot \\Bigg[1 - \\exp\\Bigg(-T_{exp} \\cdot \\Big(\\lambda + \\frac{\\epsilon \\cdot \\rho}{\\Lambda}\\Big)\\Bigg)\\Bigg] $$\n",
     "\n",
@@ -85,7 +87,7 @@
     "- $T_{exp}$: Exposure time (yr)\n",
     "- $\\epsilon:$ Erosion rate (cm/yr)\n",
     "\n",
-    "Let's compute the <sup>10</sup>Be concentration of a surface eroding at 0.01 cm/yr (or 1 m/Ma) for 10,000 yr: "
+    "Let's compute the <sup>10</sup>Be concentration of a surface eroding at 0.0001 cm/yr (or 1 m/Ma) for 10,000 yr: "
    ]
   },
   {
@@ -95,12 +97,13 @@
    "outputs": [],
    "source": [
     "# 10Be concentration at the surface (at/g)\n",
-    "erosion_rate = 0.01\n",
-    "exposure_age = 100000\n",
+    "erosion_rate = 0.0001\n",
+    "exposure_age = 10000\n",
     "\n",
     "concentration = compute_surface_concentration(erosion_rate, exposure_age, p)\n",
     "\n",
     "# Return the result\n",
+    "print(\"CRN concentration (at/g) after \" + str(exposure_age) + \" years, with an erosion rate of \" + str(erosion_rate) + \" cm/yr:\")\n",
     "print(concentration)"
    ]
   },
@@ -108,15 +111,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Re-run the previous Python cell with other values of erosion rates and exposure ages to evaluate their impact on modelled <sup>10</sup>Be concentrations."
+    "Re-run the previous Python cell with other values of erosion rates and exposure ages to evaluate their impact on modelled <sup>10</sup>Be concentrations.\n",
+    "\n",
+    "**QUESTIONS**\n",
+    "\n",
+    "1. How does the CRN surface concentration evolve when **exposure age** increases ?\n",
+    "\n",
+    "2. How does the CRN surface concentration evolve when **erosion rate** increases ?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's now build a graph showing the relation between exposure age and <sup>10</sup>Be surface concentration for different values of erosion rates. \n",
-    "Here below, you can define values of interest for erosion rate (cm/yr) and exposure age. "
+    "## The saturation of the concentration\n",
+    "\n",
+    "Let's now automatize the computation of surface concentrations for a set of values of interest for erosion rate (cm/yr) and exposure age (a). \n",
+    "\n",
+    "Below, you can modify the two vectors of values, to explore the relationship in more details. "
    ]
   },
   {
@@ -129,7 +141,8 @@
     "erosion_rates = [0.000001, 0.0001, 0.001, 0.005, 0.01, 0.03]\n",
     "\n",
     "# Vector containing the exposure ages (yr) to process\n",
-    "exposure_ages = [1000, 2000, 5000, 10000, 20000, 30000, 50000, 100000, 200000, 300000, 400000, 500000, 1000000]\n",
+    "# exposure_ages = [1000, 2000, 5000, 10000, 20000, 30000, 50000, 100000, 200000, 300000, 400000, 500000, 1000000]\n",
+    "exposure_ages = np.logspace(3, 6, 1000)\n",
     "\n",
     "# Print values\n",
     "print(\"Erosion rates (cm/yr): \")\n",
@@ -208,6 +221,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Erosion lower the measured cosmogenic nuclide concentrations in samples from eroding surfaces, by bringing material to the surface that had been previously (partially) shielded from cosmic rays. Consequently, depending on the erosion rate, 10<sup>4</sup> to 10<sup>6</sup> years are required, before constant nuclide concentrations reflect the steady state erosion rate, i.e. before secular equilibrium between production and decay/erosion is reached. \n",
+    "\n",
+    "From the previous table, we can build a graph showing the relation between exposure age and <sup>10</sup>Be surface concentration for different values of erosion rates. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -221,8 +243,19 @@
     "\n",
     "# Plot 10Be concentrations for various erosion rates \n",
     "plot = px.scatter(crn_plot, x = \"exposure_age\", y = \"crn_concentration_103\", color = \"erosion_rate_mma\", labels = dict(exposure_age = \"Exposure age (a)\", \n",
-    "crn_concentration_103 = \"<sup>10</sup>Be concentration (10<sup>3</sup> at/g)\", erosion_rate_mma = \"Erosion rate (m /Ma)\"), log_x = True, log_y = True)\n",
+    "crn_concentration_103 = \"<sup>10</sup>Be concentration (10<sup>3</sup> at/g)\", erosion_rate_mma = \"Erosion rate (m /Ma)\"), log_x = True, log_y = True, width=1000, height=800)\n",
     "plot.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**QUESTIONS**\n",
+    "\n",
+    "1. What exposure duration is required to reach the secular equilibrium between production and erosion/decay in a landscape eroding at 100 m/Ma ?\n",
+    "\n",
+    "2. How does this value evolve with decreasing erosion rate ? "
    ]
   },
   {
@@ -231,7 +264,7 @@
    "source": [
     "## The exposure dating\n",
     "\n",
-    "We sample a shallow granite block (density = 2.7) and measure a <sup>10</sup>Be concentration of 100 x 10<sup>3</sup> at/g. Let's consider a production rate at sea level high latitude (SLHL) of 1 at/g/yr and the <sup>10</sup>Be half live of 1.37 x 10<sup>6</sup> yr. \n",
+    "In the northwestern Scotland, we sample a granite moraine block (density = 2.7) and measure a <sup>10</sup>Be concentration of 8.53 x 10<sup>4</sup> at/g. We consider a production rate at sea level high latitude (SLHL) of 4.25 at/g/yr and the <sup>10</sup>Be half live of 1.37 x 10<sup>6</sup> yr. \n",
     "\n",
     "Exposure age can be written as follows: \n",
     "\n",
@@ -245,9 +278,13 @@
     "- $\\epsilon:$ Erosion rate (cm/yr)\n",
     "- $C$: Cosmogenic concentration (at/g)\n",
     "\n",
-    "Using the function `compute_exposure_duration`, compute the exposure age for an erosion rate of 1, 2, 5, 10, and 50 m/Myr. \n",
+    "**QUESTIONS**\n",
     "\n",
-    "How is the exposure age evolving in function of the erosion rate ? Why ?"
+    "1. Using the function `compute_exposure_duration` below, compute the exposure age of the moraine considering an erosion of 1 mm / kyr. What is the exposure age of the moraine ? \n",
+    "\n",
+    "2. Test the influence of erosion rate on the exposure age value. Try, for instance, erosion rates of 2, 5, 10, and 30 m/Myr. \n",
+    "\n",
+    "3. How is the exposure age evolving as a function of the erosion rate ? Why ?"
    ]
   },
   {
@@ -257,7 +294,7 @@
    "outputs": [],
    "source": [
     "# 10Be concentration measured in the sample (at/g)\n",
-    "surface_concentration = 1000\n",
+    "surface_concentration = 87000\n",
     "# Erosion rate (cm/yr)\n",
     "erosion_rate = 0.0001\n",
     "\n",
