--- a/src/2_depth-profiles.ipynb
+++ b/src/2_depth-profiles.ipynb
@@ -172,9 +172,9 @@
    "outputs": [],
    "source": [
     "# Erosion values (cm)\n",
-    "erosion = [0, 100, 200, 500, 1000, 2000]\n",
+    "erosion_values = [0, 100, 200, 500, 1000, 2000]\n",
     "print(\"Erosion (cm): \")\n",
-    "display(erosion)\n",
+    "display(erosion_values)\n",
     "\n",
     "# Exposure age values (a)\n",
     "exposure_ages = [20000, 40000, 60000, 80000, 100000, 120000, 140000]\n",
@@ -211,15 +211,15 @@
     "fit_profile_1 = pd.DataFrame()\n",
     "\n",
     "# Loop within erosion values \n",
-    "for i in range(len(erosion)):\n",
+    "for i in range(len(erosion_values)):\n",
     "\n",
     "    # Loop within exposure ages\n",
     "    for j in range(len(exposure_ages)):\n",
     "\n",
     "        # Run optimization for current set of values\n",
-    "        crn_fit = be_accumulator(concentrations_profile_1, depths, exposure_ages[j], erosion[i], 0, parameters)\n",
+    "        crn_fit = be_accumulator(concentrations_profile_1, depths, exposure_ages[j], erosion_values[i], 0, parameters)\n",
     "        # Collect result into temporary dataframe\n",
-    "        current_fit = pd.DataFrame({\"erosion\": erosion[i], \"exposure_age\": exposure_ages[j], \"nash_index\": [crn_fit[\"nash_index\"]]})\n",
+    "        current_fit = pd.DataFrame({\"erosion\": erosion_values[i], \"exposure_age\": exposure_ages[j], \"nash_index\": [crn_fit[\"nash_index\"]]})\n",
     "        # Collect current result in to main container\n",
     "        fit_profile_1 = pd.concat([fit_profile_1, current_fit], axis = 0)\n",
     "\n",
@@ -257,9 +257,9 @@
    "outputs": [],
    "source": [
     "# Erosion of selected scenario\n",
-    "erosion = 200\n",
+    "erosion = 0\n",
     "# Exposure age of selected scenario\n",
-    "exposure_age = 200000\n",
+    "exposure_age = 120000\n",
     "\n",
     "# Run the scenario with the selected values\n",
     "crn_fit_1 = be_accumulator(concentrations_profile_1, depths, exposure_age, erosion, 0, parameters)\n",
@@ -288,7 +288,7 @@
     "profile_1_plot = pd.concat([profile_1, profile_1_fit], axis = 0)\n",
     "\n",
     "# Plot depth profile\n",
-    "plot = px.scatter(profile_1_plot, x = \"concentration\", y = \"depth\", color = \"data\", labels = dict(concentration = \"<sup>10</sup>Be concentration (at/g)\", depth = \"Depth (cm)\", data = \"Data\"))\n",
+    "plot = px.scatter(profile_1_plot, x = \"concentration\", y = \"depth\", color = \"data\", labels = dict(concentration = \"<sup>10</sup>Be concentration (at/g)\", depth = \"Depth (cm)\", data = \"Data\"), width = 800, height = 600)\n",
     "plot.update_yaxes(autorange = \"reversed\")\n",
     "plot.update_layout(xaxis = {'side': 'top'}, title = \"Profile 1\")\n",
     "plot.show()"
@@ -316,15 +316,15 @@
     "fit_profile_2 = pd.DataFrame()\n",
     "\n",
     "# Loop within erosion \n",
-    "for i in range(len(erosion)):\n",
+    "for i in range(len(erosion_values)):\n",
     "\n",
     "    # Loop within exposure ages\n",
     "    for j in range(len(exposure_ages)):\n",
     "\n",
     "        # Run optimization for current set of values\n",
-    "        crn_fit = be_accumulator(concentrations_profile_2, depths, exposure_ages[j], erosion[i], 0, parameters)\n",
+    "        crn_fit = be_accumulator(concentrations_profile_2, depths, exposure_ages[j], erosion_values[i], 0, parameters)\n",
     "        # Collect result into temporary dataframe\n",
-    "        current_fit = pd.DataFrame({\"erosion\": erosion[i], \"exposure_age\": exposure_ages[j], \"nash_index\": [crn_fit[\"nash_index\"]]})\n",
+    "        current_fit = pd.DataFrame({\"erosion\": erosion_values[i], \"exposure_age\": exposure_ages[j], \"nash_index\": [crn_fit[\"nash_index\"]]})\n",
     "        # Collect current result in to main container\n",
     "        fit_profile_2 = pd.concat([fit_profile_2, current_fit], axis = 0)\n",
     "\n",
@@ -362,12 +362,12 @@
    "outputs": [],
    "source": [
     "# Erosion of selected scenario\n",
-    "erosion = 200\n",
+    "erosion = 0\n",
     "# Exposure age of selected scenario\n",
-    "exposure_age = 200000\n",
+    "exposure_age = 140000\n",
     "\n",
     "# Run the scenario with the selected values\n",
-    "crn_fit_2 = be_accumulator(concentrations_profile_2, depths, exposure_age, erosion_rate, 0, parameters)\n",
+    "crn_fit_2 = be_accumulator(concentrations_profile_2, depths, exposure_age, erosion, 0, parameters)\n",
     "\n",
     "# Get the fitted CRN values and add them to profile table\n",
     "display(pd.concat([profile_2, pd.Series(crn_fit_2[\"crn_fitted\"], name = \"crn_fitted\", dtype = \"Float64\")], axis = 1))"
@@ -393,7 +393,7 @@
     "profile_2_plot = pd.concat([profile_2, profile_2_fit], axis = 0)\n",
     "\n",
     "# Plot depth profile\n",
-    "plot = px.scatter(profile_2_plot, x = \"concentration\", y = \"depth\", color = \"data\", labels = dict(concentration = \"<sup>10</sup>Be concentration (at/g)\", depth = \"Depth (cm)\", data = \"Data\"))\n",
+    "plot = px.scatter(profile_2_plot, x = \"concentration\", y = \"depth\", color = \"data\", labels = dict(concentration = \"<sup>10</sup>Be concentration (at/g)\", depth = \"Depth (cm)\", data = \"Data\"), width = 800, height = 600)\n",
     "plot.update_yaxes(autorange = \"reversed\")\n",
     "plot.update_layout(xaxis = {'side': 'top'}, title = \"Profile 2\")\n",
     "plot.show()"
