--- a/src/2_depth-profiles.ipynb
+++ b/src/2_depth-profiles.ipynb
@@ -46,7 +46,7 @@
     "\n",
     "Copy these lines in the calculator box and compute the exposure age for each position. \n",
     "\n",
-    "**QUESTION**\n",
+    "**QUESTIONS**\n",
     "\n",
     "1. Does the result seem logical to you? Why? \n",
     "2. What could have influenced the CRN value observed at the surface ?\n",
@@ -140,7 +140,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we can plot the concentrations observed in each depth profile. What profile seems the oldest ? Is it logical with respect to the process of glacier retreat ?  "
+    "Now, we can plot the concentrations observed in each depth profile. \n",
+    "\n",
+    "**QUESTIONS**\n",
+    "\n",
+    "1. What profile seems the oldest ? \n",
+    "\n",
+    "2. Is it logical with respect to the process of glacier retreat ?  "
    ]
   },
   {
