fix stuff for training session

--- a/src/1_exposure-age.ipynb
+++ b/src/1_exposure-age.ipynb
@@ -97,8 +97,8 @@
    "outputs": [],
    "source": [
     "# 10Be concentration at the surface (at/g)\n",
-    "erosion_rate = 0.0001\n",
-    "exposure_age = 10000\n",
+    "erosion_rate = \n",
+    "exposure_age = \n",
     "\n",
     "concentration = compute_surface_concentration(erosion_rate, exposure_age, p)\n",
     "\n",
@@ -138,11 +138,10 @@
    "outputs": [],
    "source": [
     "# Constant erosion rate of the surface (cm/yr)\n",
-    "erosion_rates = [0.000001, 0.0001, 0.001, 0.005, 0.01, 0.03]\n",
+    "erosion_rates = [0.000001, 0.03]\n",
     "\n",
     "# Vector containing the exposure ages (yr) to process\n",
-    "# exposure_ages = [1000, 2000, 5000, 10000, 20000, 30000, 50000, 100000, 200000, 300000, 400000, 500000, 1000000]\n",
-    "exposure_ages = np.logspace(3, 6, 1000)\n",
+    "exposure_ages = [1000, 2000, 5000, 10000, 1000000]\n",
     "\n",
     "# Print values\n",
     "print(\"Erosion rates (cm/yr): \")\n",
@@ -294,9 +293,9 @@
    "outputs": [],
    "source": [
     "# 10Be concentration measured in the sample (at/g)\n",
-    "surface_concentration = 87000\n",
+    "surface_concentration =\n",
     "# Erosion rate (cm/yr)\n",
-    "erosion_rate = 0.0001\n",
+    "erosion_rate = \n",
     "\n",
     "# Compute exposure age (yr)\n",
     "exposure_age = compute_exposure_age(surface_concentration, erosion_rate, p)\n",
