--- a/src/1_exposure-age.ipynb
+++ b/src/1_exposure-age.ipynb
@@ -142,6 +142,8 @@
     "\n",
     "# Vector containing the exposure ages (yr) to process\n",
     "exposure_ages = [1000, 2000, 5000, 10000, 1000000]\n",
+    "# Consider using a vector defining values at equal interval in a log space, using logspace function from numpy library\n",
+    "# exposure_ages = np.logspace(3, 6, 1000)\n",
     "\n",
     "# Print values\n",
     "print(\"Erosion rates (cm/yr): \")\n",
