--- a/src/1_exposure-age.ipynb
+++ b/src/1_exposure-age.ipynb
@@ -295,9 +295,9 @@
    "outputs": [],
    "source": [
     "# 10Be concentration measured in the sample (at/g)\n",
-    "surface_concentration =\n",
+    "surface_concentration = 87000\n",
     "# Erosion rate (cm/yr)\n",
-    "erosion_rate = \n",
+    "erosion_rate = 0.0001\n",
     "\n",
     "# Compute exposure age (yr)\n",
     "exposure_age = compute_exposure_age(surface_concentration, erosion_rate, p)\n",
